k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crud-itt
  labels:
    name: crud-itt
    app: fastapi-crud
