k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-itt-service
  namespace: crud-itt
  labels:
    app: fastapi-crud
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: fastapi-crud
